# stm32f1_template

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Dockerfile  Makefile  README.md  bluepill_makefile-example.ioc
.devcontainer/: c_cpp_properties.json  devcontainer.json
Core/Src/: main.c
project/: project.c  project.h
toolchain/: Makefile
